package dio._1coding_future_POO.desafio;

public interface AparelhoTelefonico {

    public void ligar();
    public void atender();
    public void iniciarCorreioVoz();
}
