package dio._1coding_future_POO.desafio;

public interface NavegadorInternet {

    public void exibirPagina();
    public void adicionarNovaAba();
    public void atualizarPagina();
}
