package dio._1coding_future_POO.desafio;

public interface ReprodutorMusical {

    public void tocar();
    public void pausar();
    public void selecionar();
}
